<resources>
    <string name="app_name">NotifyMe</string>
    <string name="task">Task :</string>
    <string name="enter_task_name_here">Enter task Name Here</string>
    <string name="type">Type :</string>
    <string name="from">From :</string>
    <string name="to">To :</string>
    <string name="notify_at">Notify at :</string>
    <string name="make_it_a_habit">Make it a habit </string>
    <string name="Save">Save</string>

    <!-- Strings for titles of each page of the welcome screen -->
    <string name="title_welcome">Welcome to NotifyMe</string>
    <string name="title_life_guide">Life Guide and Assistant</string>
    <string name="title_time_manager">Time Manager</string>
    <string name="title_performance">View Performance</string>

    <!-- Strings for the descriptions of each page of the welcome screen -->
    <string name="description_welcome">
        An app that reminds you of your task set. Motivating you all along!
    </string>
    <string name="description_life_guide">
        An assistant which will guide you throughout your life. Also manages your day and how you spend your time.
    </string>
    <string name="description_time_manager">
        It will give you optimized suggestions to spend your time effectively by considering how you spend your time, the app will build your schedule and will guide you accordingly.
    </string>
    <string name="description_performance">
        View your performance in terms of stunning Pie charts!
    </string>

    //navigation drawer
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_performance">Performance</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Performance</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="created_by_uiet_students">Created By Uiet Students</string>
    <string name="todo">TODO</string>

    <string name="swipe_right_to_view_navigation_drawer">Swipe Right to view Navigation Drawer. Click below button to enter data</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="delete_all_data">Delete all data</string>
    <string name="save_changes">Save changes</string>
    <string name="discard_changes">Discard changes</string>
    <string name="delete_record">Delete record</string>
    <string name="insert_data">Insert data</string>
    <string name="Task_Name_is_missing">Task Name is missing</string>
    <string name="Task_Type_is_missing">Task type is missing</string>
    <string name="deletion_failed">Deletion failed</string>
    <string name="deletion_successful">Deletion Successful</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="editor_delete_data_successful">Data deleted </string>
    <string name="editor_delete_data_failed">Error with deleting data</string>
    <string name="data_changed_successfully">Data Changed successfully</string>
    <string name="data_not_changed">data not changed</string>
    <string name="we_are_uietians">WE ARE UIETIANS</string>
    <string name="next">Show Performance</string>
    <string name="output">Output</string>
    <string name="next1">Next</string>


</resources>
