<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Activity.EditYourTask"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/light_teal"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textTask"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/tendp"
                android:layout_marginLeft="@dimen/tendp"
                android:layout_marginTop="@dimen/tendp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/task"
                android:textColor="@android:color/black"
                android:textSize="@dimen/twentysp" />

            <EditText
                android:id="@+id/editTask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/tendp"
                android:layout_marginLeft="@dimen/tendp"
                android:layout_marginTop="@dimen/tendp"
                android:hint="@string/enter_task_name_here"
                android:inputType="textCapWords"
                android:textColor="@android:color/black"
                android:textSize="@dimen/twentysp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/onedp"
            android:layout_margin="@dimen/tendp"
            android:background="@color/teal_800" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/tendp"
                android:layout_marginLeft="@dimen/tendp"
                android:layout_marginTop="@dimen/tendp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/type"
                android:textColor="@android:color/black"
                android:textSize="@dimen/twentysp" />

            <Spinner
                android:id="@+id/simple_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/tendp"
                android:layout_marginLeft="@dimen/tendp"
                android:layout_marginTop="@dimen/tendp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/onedp"
            android:layout_margin="@dimen/tendp"
            android:background="@color/teal_800" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textFrom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/tendp"
                android:layout_marginLeft="@dimen/tendp"
                android:layout_marginTop="@dimen/tendp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/from"
                android:textColor="@android:color/black"
                android:textSize="@dimen/twentysp" />

            <CalendarView
                android:id="@+id/simpleCalendarViewFrom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/tendp"
                android:firstDayOfWeek="2" />

        </LinearLayout>

            <TextView
                android:id="@+id/fromdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/tendp"
                />



        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/onedp"
            android:layout_margin="@dimen/tendp"
            android:background="@color/teal_800" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textTo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/tendp"
                android:layout_marginLeft="@dimen/tendp"
                android:layout_marginTop="@dimen/tendp"
                android:textSize="@dimen/twentysp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/to"
                android:textColor="@android:color/black"
                />

            <CalendarView
                android:id="@+id/simpleCalendarViewTo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/tendp"
                android:firstDayOfWeek="2" />

        </LinearLayout>

        <TextView
            android:id="@+id/todate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/tendp"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/onedp"
            android:layout_margin="@dimen/tendp"
            android:background="@color/teal_800" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textNotifyAt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/tendp"
                android:layout_marginLeft="@dimen/tendp"
                android:layout_marginTop="@dimen/tendp"
                android:textSize="@dimen/twentysp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/notify_at"
                />

            <TimePicker
                android:id="@+id/timepickerNotifyAt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:timePickerMode="spinner" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/onedp"
            android:layout_margin="@dimen/tendp"
            android:background="@color/teal_800" />

        <CheckBox
            android:id="@+id/checkboxMakeItAHabit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/tendp"
            android:layout_marginLeft="@dimen/tendp"
            android:layout_marginTop="@dimen/tendp"
            android:textSize="@dimen/twentysp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/make_it_a_habit"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/onedp"
            android:layout_margin="@dimen/tendp"
            android:background="@color/teal_800" />

        <Button
            android:id = "@+id/buttonSave"
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/tendp"
            android:background = "@drawable/button_round"
            android:text="@string/Save"
            android:textColor = "@color/white"
            android:textSize = "@dimen/twentysp"/>

    </LinearLayout>
</ScrollView>